# homedns

./: .gitignore  README.md  client.py  creds.json  dnsserver.py  pyproject.toml  restserver.py  server.py  setup.cfg  store.py
docs/: dns-queries.md  jwt-auth.md  rest-cli.md
homedns/: __init__.py  __main__.py  certificates.py  cli.py  config.py  constants.py  cred.py  dnsclient.py  dnsserver.py  errors.py  jkscli.py  jwt.py  log.py  restapi.py  restclient.py  server.py  store.py  updater.py
homedns/cli/: common.py  jwt.py  restclient.py  server.py  updater.py
scripts/: install_for_debian.sh  install_server.sh  install_service.sh  install_updater.sh
service/: homedns-updater.service  homedns.service  server_config.yaml
